Bug 84949 - Placing mouse Cursor over Left tab, Center tab, Right tab, Decimal tab icon doesn't show a tooltip
Summary: Placing mouse Cursor over Left tab, Center tab, Right tab, Decimal tab icon d...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86 (IA32) Windows (All)
: low trivial
Assignee: Andreas Heinisch
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Toolbars-Tooltips
  Show dependency treegraph
 
Reported: 2014-10-13 05:39 UTC by Ashok kumar
Modified: 2025-08-21 12:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Placing the mouse cursor on the (Left tab, Center tab, Right tab, Decimal tab) icons does not shows its name/usage based on comparing LibreOffice Writer and Microsoft word. (197.25 KB, application/vnd.oasis.opendocument.text)
2014-10-13 05:39 UTC, Ashok kumar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ashok kumar 2014-10-13 05:39:18 UTC
Created attachment 107755 [details]
Placing the mouse cursor on the (Left tab, Center tab, Right tab, Decimal tab) icons does not shows its name/usage based on comparing LibreOffice Writer and Microsoft word.

Operating System: Windows 8
LibreOffice Writer Version: 4.3.0.2

Comparing with "MS WORD"

When placing the mouse cursor on the (Left tab, Center tab, Right tab, Decimal tab) icons does not shows its name/usage which is located at the top Right corner of LibreOffice Writer.

STEPS TO REPRODUCE:

1.Open LibreOffice Writer.
2.place mouse cursor on that icon which i mentioned above.
3.open Microsoft word.
4.place the cursor on that icon.


Actual Result:

When placing the mouse cursor on the (Left tab, Center tab, Right tab, Decimal tab) icons does not shows its name/usage. But in "ms word" it shows its name/usage.

Expeced Result:

When placing the mouse cursor on the (Left tab, Center tab, Right tab, Decimal tab) icons it should shows its name/usage as same as ms word.
Comment 1 tommy27 2014-10-13 18:03:35 UTC
I confirm issue under Win7x64 using LibO 4.3.2.2
Comment 2 tommy27 2014-10-13 19:09:10 UTC
always been like that from OOo era.
version -> inherited from OOo
Comment 3 QA Administrators 2015-10-14 19:57:30 UTC Comment hidden (obsolete)
Comment 4 Buovjaga 2016-01-29 16:14:28 UTC
Still confirmed.

Win 7 Pro 64-bit Version: 5.2.0.0.alpha0+
Build ID: 259c1ed201f4277d74dfd600fed8c837cbf56abc
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-01-27_00:45:12
Locale: fi-FI (fi_FI)
Comment 5 QA Administrators 2017-03-06 14:33:17 UTC Comment hidden (obsolete)
Comment 6 QA Administrators 2020-12-13 03:46:36 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2022-12-14 03:20:59 UTC Comment hidden (obsolete)
Comment 8 QA Administrators 2024-12-14 03:17:18 UTC Comment hidden (obsolete)
Comment 9 Commit Notification 2025-08-21 10:15:33 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d3568ad1fad269e326e922ab61f439fe51863bbf

tdf#84949 - Show tooltip for left, center, right, and decimal tab

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.