tdf#84949 - Show tooltip for left, center, right, and decimal tab

Change-Id: Idf0ac686b5918a8941d20dbcde23162879acc1d7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189496
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Jenkins